# TroveKit

./: .gitignore  CHANGELOG.md  README.ja.md  README.md  README.zh-CN.md  README.zh-HK.md  README.zh-TW.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: basex.rs  command.rs  lib.rs  log_manager.rs  main.rs  time_utils.rs  trivium.rs
src-tauri/src/crypto/: sm4.rs
src/components/: CommandMenu.tsx  LanguageSelector.tsx  Layout.tsx  LogPanel.tsx  MonacoEditor.tsx  Sidebar.tsx  ThemeToggle.tsx  TitleBar.tsx  theme-provider.tsx
src/contexts/: FeaturePreferencesContext.tsx  LogContext.tsx  ToastContext.tsx
src/hooks/: useFeatures.ts  usePersistentState.ts
src/lib/: base32.ts  i18n.ts  ip_subnet.test.ts  ip_subnet.ts  md4.ts  store.ts  trivium.test.ts  trivium.ts
src/locales/: en.json  ja.json  zh-HK.json  zh-TW.json  zh.json
src/styles/: globals.css
src/tools/: ClassicalTool.tsx  ConverterTool.tsx  EncoderTool.tsx  FormatterTool.tsx  GeneratorTool.tsx  HashTool.tsx  JsonTool.tsx  LogManagementTool.tsx  OthersTool.tsx  Settings.tsx
src/tools/classical/: BaconTab.tsx  CaesarTab.tsx  MorseTab.tsx
src/tools/converter/: JsonXmlTab.tsx  JsonYamlTab.tsx  SubnetTab.tsx  TimestampTab.tsx
src/tools/encoder/: Base32Tab.tsx  Base64Tab.tsx  BaseXTab.tsx  BrainfuckTab.tsx  HexTab.tsx  (+2 more)
src/types/: js-md2.d.ts
(+29 files in other folders)
