[package]
name = "trovekit"
version = "0.1.8"
description = "TroveKit, your tool treasure."
authors = ["cloris", "haoyu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trovekit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
data-encoding = "2.6.0"
base-x = "0.2.11"
base91 = "0.1.0"
base85 = "2.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-store = "2.4.2"

trivium = "0.1.0"

# SM4 (RustCrypto) + common block/stream modes
sm4 = "0.5"
cipher = "0.4"
ecb = "0.1"
cbc = "0.1"
cfb-mode = "0.8"
ofb = "0.6"
ctr = "0.9"

